feat: add internationalization in project

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: nego_design
 description: A modern, responsive design system for Flutter applications with simple and customizable widgets
-version: 0.0.4
+version: 0.0.6
 homepage: https://github.com/negoflutter/nego_design
 repository: https://github.com/negoflutter/nego_design
 issue_tracker: https://github.com/negoflutter/nego_design/issues
@@ -18,17 +18,21 @@ dependencies:
   plugin_platform_interface: ^2.0.2
   flutter_animate: ^4.5.2
   toastification: ^3.0.3
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
   # This section identifies this Flutter project as a plugin project.
   # The 'pluginClass' specifies the class (in Java, Kotlin, Swift, Objective-C, etc.)
   # which should be registered in the plugin registry. This is required for
